# openfoodfacts-query

./: .dockerignore  .env  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_python  Makefile  README.md  docker-compose-run.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: auto-assign-pr.yml  container-build.yml  container-deploy.yml  github-projects.yml  label.yml  release-please.yml  semantic-pr.yml
confs/postgresql/: base.conf  base_hba.conf  dev.conf  dev_hba.conf  dev_primary.conf  dev_primary_hba.conf  dev_replica.conf
data/: README.md
docker/: compose-dev.yml  dev.yml  prod.yml
docs/: explain-replication.md  how-to-test-replication-localy.md  python-migration.md
docs/decisions/: event-aggregation.md
docs/events/: README.md  openfoodfacts-query.html  openfoodfacts-query.yaml
env/: env.replica  setenv.sh
migrations/: Migration20230904100447.py  Migration20231030101011.py  Migration20231030115649.py  Migration20231127180807.py  Migration20231201090312.py  Migration20231216114832.py  Migration20231216155931.py  Migration20231216174233.py  Migration20231216175810.py  Migration20231218145009.py  Migration20231219113721.py  Migration20240614163139.py  Migration20240712164659.py  Migration20240719101700-redis.py  Migration20240809162441.py  Migration20240809164713.py  Migration20240913113703.py  Migration20241029165410.py  Migration20250224131357.py
query/: README.md  __init__.py  config.py  conftest.py  database.py  database_test.py  db.py  events.py  events_test.py  main.py  main_test.py  migrator.py  mongodb.py  redis.py  redis_test.py  routes.py  routes_test.py  scheduler.py  scheduler_test.py  test_helper.py
query/assets/: __init__.py
query/migrations/: Migration20230904100447.py  Migration20250116111100.py  Migration20250224131357.py  Migration20250328.py  Migration20250609175700.py  Migration20250614092300.py  Migration20250618162100.py  Migration20250619083800.py  Migration20251208175200.py  Migration20260116111100.py  Migration20260116162800.py  Migration20260218125200.py  Migration20260312123000.py  Migration20260327113000.py  Migration20260327163100.py  PENDING_MIGRATIONS.md  __init__.py
query/models/: __init__.py  country.py  domain_event.py  filter.py  health.py  product.py  query.py  scan.py  scans_by_country.py
query/repositories/: product.py  product_ingredients.py  product_tags.py  products.py  settings.py
query/services/: __init__.py  event.py  event_test.py  health.py  health_test.py  import_service.py  import_service_test.py  ingestion.py  ingestion_test.py  query.py  query_aggregate_test.py  query_count_test.py  query_find_test.py  scan.py  scan_test.py
query/tables/: __init__.py  collection_type.py  contributor.py  country.py  country_test.py  loaded_tag.py  nutrient.py  product.py  product_country.py  product_ingredient.py  product_nutrient.py  (+10 more)
scripts/: __init__.py  export_db_sample.py  import_db_sample.py  refresh_countries.mjs  refresh_countries.py
src/: app.controller.spec.ts  app.controller.ts  app.module.ts  constants.ts  db.ts  import.ts  main.ts  mikro-orm.config.ts
temp/: Product.js.json  ProductTag.js.json
test/: global-setup.ts  global-teardown.ts  test.helper.ts
tests/: conftest.py  helper.py  test_health.py  test_main.py  test_product.py  test_query.py
(+90 files in other folders)
