[project]
name = "query"
version = "0.2.0"
description = "Open Food Facts: The Open Food Facts Data Warehouse"
authors = [
    {name = "Open Food Facts Team"}
]
license = {text = "GNU Affero General Public License v3"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-settings",
    "asyncpg",
    "motor",
    "fastapi",
    "uvicorn[standard] (>=0.34.3,<0.35.0)",
    "redis[hiredis]",
    "apscheduler",
    "toml",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
fastapi-cli = "*"
testcontainers = {extras = ["postgres", "redis"], version = "*"}
pytest-cov = "*"
httpx = "*"
black = "*"
autoflake = "*"
isort = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
omit = [
    # omit test files
    "*_test.py",
    "test_*.py",
    "query/conftest.py"
]

